--- a/package.json
+++ b/package.json
@@ -14,26 +14,36 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/express": "^4.17.11",
-    "@types/node": "^14.14.41",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "pug": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
     "@babel/preset-env": "^7.13.15",
     "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/webpack-env": "^1.16.0",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
     "html-webpack-pug-plugin": "^3.0.0",
     "nodemon": "^2.0.7",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^9.1.0",
+    "ts-node": "^9.1.1",
     "webpack": "^5.35.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-middleware": "^4.1.0",
