--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,5 +1,7 @@
 {
   "singleQuote": true,
   "arrowParens": "always",
-  "printWidth": 120
+  "printWidth": 120,
+  "tabWidth": 2,
+  "semi": false
 }
