--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -3,5 +3,7 @@
   "arrowParens": "always",
   "printWidth": 120,
   "tabWidth": 2,
-  "semi": false
+  "semi": false,
+  "spaceBeforeFunctionParen": true,
+  "trailingComma": "es5"
 }
