--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -10,6 +10,13 @@
     "react-hooks"
   ],
   "rules": {
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never"
+    }]
   },
   "settings": {
     "react": {
