--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -8,5 +8,13 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "space-before-function-paren": ["error", "never"],
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never"
+    }]
   }
 }
