--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "pug": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "jest": "^26.6.3",
+    "tailwindcss": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
@@ -46,9 +48,11 @@
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
@@ -63,8 +67,10 @@
     "html-webpack-plugin": "^5.3.1",
     "html-webpack-pug-plugin": "^3.0.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "postcss": "^8.2.12",
+    "postcss-loader": "^5.2.0",
+    "postcss-preset-env": "^6.7.0",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
     "style-loader": "^2.0.0",
