--- a/package.json
+++ b/package.json
@@ -24,15 +24,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.21.1",
     "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "lodash": "^4.17.21",
     "pug": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "typescript": "^4.2.4",
-    "jest": "^26.6.3",
-    "tailwindcss": "^2.1.2"
+    "tailwindcss": "^2.1.2",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
