--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "start": "cross-env NODE_ENV=production ts-node dist/server/index.js",
     "build": "concurrently \"yarn build:server\" \"yarn build:client\"",
     "build:server": "tsc -p server",
-    "build:client": "./node_modules/.bin/webpack",
+    "build:client": "NODE_ENV=production ./node_modules/.bin/webpack",
     "prettier:server": "./node_modules/.bin/prettier --config .prettierrc.json --write server/**/*.ts",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "./node_modules/.bin/pretty-quick --staged"
     }
   },
   "keywords": [],
@@ -26,14 +26,25 @@
   "dependencies": {
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "connected-react-router": "^6.9.1",
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
     "express": "^4.17.1",
+    "history": "^5.0.0",
+    "immer": "^9.0.1",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
     "pug": "^3.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "react-saga": "^0.3.1",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
+    "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.2",
     "typescript": "^4.2.4"
   },
@@ -44,10 +55,15 @@
     "@babel/preset-typescript": "^7.13.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
+    "@types/history": "^4.7.8",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-helmet": "^6.1.1",
+    "@types/react-router": "^5.1.13",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -76,6 +92,7 @@
     "postcss-preset-env": "^6.7.0",
     "prettier": "2.2.1",
     "pretty-quick": "^3.1.0",
+    "redux-devtools-extension": "^2.13.9",
     "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
     "ts-loader": "^9.1.0",
