--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,7 @@
     "target": "es6",
     "module": "commonjs",
     "outDir": "../dist/server",
-    "baseUrl": "."
+    "skipLibCheck": true
   },
   "include": [
     "*.ts",
