--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
     "express": "^4.17.1",
-    "history": "^5.0.0",
+    "history": "4.10.1",
     "immer": "^9.0.1",
     "jest": "^26.6.3",
     "lodash": "^4.17.21",
@@ -38,6 +38,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-saga": "^0.3.1",
