--- a/package.json
+++ b/package.json
@@ -41,12 +41,13 @@
     "react-helmet-async": "^1.0.9",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-saga": "^0.3.1",
     "redux": "^4.0.5",
+    "redux-injectors": "^1.3.0",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "styled-components": "^5.2.3",
     "tailwindcss": "^2.1.2",
+    "typesafe-actions": "^5.1.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
@@ -58,10 +59,12 @@
     "@types/express": "^4.17.11",
     "@types/history": "^4.7.8",
     "@types/jest": "^26.0.22",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.1",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router": "^5.1.13",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
