--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "index.js",
   "scripts": {
     "dev": "concurrently --kill-others \"yarn watch:server\" \"yarn watch:client\"",
-    "watch:server": "cross-env NODE_ENV=development nodemon --watch './**/*.ts' --exec 'ts-node' server/index.ts",
+    "watch:server": "nodemon --watch './**/*.ts' --exec 'ts-node' server/index.ts",
     "watch:client": "./node_modules/.bin/webpack --watch",
-    "start": "cross-env NODE_ENV=production ts-node dist/server/index.js",
+    "start": "ts-node dist/server/index.js",
     "build": "concurrently \"yarn build:server\" \"yarn build:client\"",
     "build:server": "tsc -p server",
-    "build:client": "NODE_ENV=production ./node_modules/.bin/webpack",
+    "build:client": "./node_modules/.bin/webpack",
     "prettier:server": "./node_modules/.bin/prettier --config .prettierrc.json --write server/**/*.ts",
     "test": "jest",
     "lint": "./node_modules/.bin/eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
@@ -74,8 +74,9 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.2",
-    "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.2",
